# wanker

./: .gitignore  Cargo.toml  README.md  installer.iss
src/: config.rs  flags.rs  main.rs  menu.html
src/platform/: mod.rs  other.rs  windows.rs
